# twitch-logger

./: .env.test  .gitignore  Cargo.toml  README.md  config.toml
.cargo-husky/hooks/: pre-commit
src/: client.rs  config.rs  error.rs  handler.rs  lib.rs  main.rs
src/entities/: chat.rs
src/logger/: console_logger.rs  db_logger.rs  file_logger.rs  mod.rs  value_logger.rs
src/utils/: chat_message_format.rs  env.rs  mod.rs
