[package]
name = "twitch-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
chrono = { version = "0.4.24", features = ["serde"] }
config = "0.13.3"
dirs = "5.0.0"
dotenv = "0.15.0"
log = { version = "0.4.17", features = ["serde"] }
postgres = {version = "0.19.4", features = ["with-chrono-0_4"]}
pretty_env_logger = "0.4.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full", "macros"] }
twitch-irc = { version = "5.0.0", features = ["transport-tcp", "transport-tcp-native-tls", "refreshing-token-native-tls", "with-serde"] }

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]

